--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ certifi==2024.8.30
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
-folium
+folium==0.17.0
 gitdb==4.0.11
 GitPython==3.1.43
 idna==3.10
